# OpenTutorials-Desktop

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.agents/rules/: api-conventions.md  architecture.md  bundler-protocol.md  coding-standards.md  design-system.md  git-workflow.md  local-db-storage.md  wiki-maintenance.md
.github/workflows/: release.yml
scripts/: post-build.cjs  tauri-wrapper.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  paths.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/bundle/: mod.rs  validator.rs
src-tauri/src/db/: mod.rs  query_engine.rs  rpc.rs  storage.rs  types.rs
src/lib/: utils.ts
src/pages/: AgentDetail.tsx  Agents.tsx  ComingSoon.tsx  CourseDetail.tsx  Courses.tsx  CoursesManage.tsx  Dashboard.tsx  Learn.tsx  MyCourses.tsx  SettingsAgent.tsx  SettingsCourse.tsx  SettingsProfile.tsx  SettingsUI.tsx
wiki/: history.json  index.md  lint-report.md  log.md
wiki/concepts/: AIAgentWorker.md  AITutorExclusivePersonaSetup.md  AuthenticationTroubleshooting.md  ContentMonitoring.md  CourseCreatorAgent.md  DesignSystem.md  EmailVerificationTroubleshooting.md  ExternalHermesAgent.md  HermesArchitecture.md  HermesCron.md  HermesDashboardAPI.md  HermesSecurity.md  HermesSkills.md  HermesWorkerAPI.md  HiddenMessageParsing.md  HydraAgentGuideline.md  HydraAgentLocalSetup.md  HydraAgentService.md  IframeSecurityTrilemma.md  LocalLLMAgentIntegration.md  NextJs15CacheIssue.md  (+11 more)
(+156 files in other folders)
